--- a/dundun-static-blog/info.html
+++ b/dundun-static-blog/info.html
@@ -11,9 +11,9 @@
     <h1>Dundun's Static Blog ✨</h1>
     <nav>
       <ul>
-        <li><a href="index.html">홈</a></li>
-        <li><a href="blog.html">블로그</a></li>
-        <li><a href="info.html">정보</a></li>
+<li><a href="/index.html">홈</a></li>
+<li><a href="/blog/blog.html">블로그</a></li>
+<li><a href="/info.html">정보</a></li>
       </ul>
     </nav>
     <button id="mode-toggle">🌙 다크모드</button>
